Use https instead of http

--- a/KabaNa/index.html
+++ b/KabaNa/index.html
@@ -18,19 +18,19 @@ body {
 
 <meta name="viewport" content="width=device-width">
 <title>Dictionnaire Kaba Na</title>
-<link rel="stylesheet" href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/css/dictstylesheet.css">
+<link rel="stylesheet" href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/css/dictstylesheet.css">
 
 </head>
 <body>
 <div id="noscript">
 JavaScript must be enabled to use the KabaNa language sound dictionary.
 If you do not have or wish to enable javascript,
-please view the <a href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/pdfs/KabaNa.pdf">KabaNa PDF dictionary</a>.
+please view the <a href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/pdfs/KabaNa.pdf">KabaNa PDF dictionary</a>.
 </div>
 <div id="loading">
 <h1>The Sound Dictionary is loading...</h1>
 <br>
-<img src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/Spinner.gif" alt="loading image">
+<img src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/Spinner.gif" alt="loading image">
 </div>
 <nav>
 <div id="quiver" class="down">
@@ -45,7 +45,7 @@ please view the <a href="http://morkegbooks.com/Services/World/Languages/SaraBag
 <div class="collapsable-content">
 <a href="#intro" id="intro-link">Introduction</a>
 <a href="#abbr" id="abbr-link">Abbréviations</a>
-<a href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/">Home</a>
+<a href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/">Home</a>
 </div>
 </div>
 <div class="form-group">
@@ -80,7 +80,7 @@ de la langue Na
   le Projet des Langues Sara-Baguirmiènne
   <br>
   est disponible à</h3>
-  <a href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi">http://morkegbooks.com/Services/World/Languages/SaraBagirmi</a>
+  <a href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi">https://morkegbooks.com/Services/World/Languages/SaraBagirmi</a>
 
   <hr>
   </section>
@@ -276,7 +276,7 @@ C'est pourquoi qu'il n'est pas allé au marché?
 Comment ça va?
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/hipposmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/hipposmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -2015,7 +2015,7 @@ difficile de décortiquer (parce que la chose est dure et humide).
 Le mil est difficile de décortiquer (parce qu'il est humide).
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/mbata.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/mbata.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -2069,7 +2069,7 @@ banane.
 Il est très difficile trouver des bananes à Kyabé.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/rhinosmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/rhinosmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -6522,7 +6522,7 @@ dix.
 -cinquante CFA
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/bufflesmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/bufflesmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -8127,7 +8127,7 @@ jaune de l'oeuf.
 Le jaune d'oeuf est très riche.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/waterpotsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/waterpotsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -11131,7 +11131,7 @@ chameau, dromadaire.
 Parfois les éleveurs viennent avec les chameaux.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/gijasmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/gijasmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -12487,7 +12487,7 @@ famille, parenté.
 Je n'ai pas de famille.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/crowsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/crowsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -12664,7 +12664,7 @@ Au moment quand le mil est mûr, il n'y a plus de faim.
 Il est une personne gentille, il ne fait pas de mauvaises choses aux gens.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/elephantsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/elephantsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -14876,7 +14876,7 @@ le bras.
 L'enfant est tombé et son bras s'est cassé.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/margouillatsm.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/margouillatsm.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -15432,7 +15432,7 @@ Le varan noir habite dans l'eau. Sa viande est très bonne à manger.
 sorte de crocodile énorme.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/varansmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/varansmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -15500,7 +15500,7 @@ Le Biophytum petersianum est une plante que les enfants s'amusent avec, ils souf
 esp. d'arbuste dont le fruit séché donne des fibres.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/crestedcranesm.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/crestedcranesm.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -15568,7 +15568,7 @@ gros orteil.
 Un bois est tombé sur mon gros orteil et je ne peux pas marcher.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/preyingmantissm.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/preyingmantissm.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -17472,7 +17472,7 @@ mille-pattes.
 Le mille-pattes a plus de pattes que la scolopendre.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/giraffesmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/giraffesmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -19619,7 +19619,7 @@ avoir de la chance (inf. de
 <span class="sara-bagirmi-lang"><a class="play-sound" onclick="playSound('Sound/Kab1354Exp01SS.mp3')"> Kùmā ní ní-kàɓē í táḿ kánē hàā nj-àgà dànà séè sìníì.</a></span>Se moquer de ton ami va créer des problèmes entre vous.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/kema.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/kema.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -19711,7 +19711,7 @@ grain qui n'a pas complètement poussé.
 On ne peut pas récolter les grains d'arachides qui n'ont pas encore poussé complètement.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/roniersmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/roniersmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -23292,7 +23292,7 @@ personne déjà initiée.
 Les jeunes qui viennet d'être initiés ne veulent pas travailler.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/mongsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/mongsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -23750,7 +23750,7 @@ enclume, massue du forgeron.
 Le forgeron prend l'enclume pour frapper le fer.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/wildcatsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/wildcatsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -24006,7 +24006,7 @@ couvercle.
 Le couvercle sur mon grenier est déchiré et je veux tresser un nouveau.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/barsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/barsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -24428,7 +24428,7 @@ feuille, feuilles.
 La sauce des feuilles de manioc est très délicieuse quand on met la pâte d'arachide dedans.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/image064.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/image064.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -25664,7 +25664,7 @@ blanc, européen.
 De nos jours il n'y a pas beaucoup d'européens à Kyabé.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/antchevalsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/antchevalsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -26647,7 +26647,7 @@ matière de plastique ou de nilon.
 Le sac en plastique n'est pas très dur.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/kagenim1.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/kagenim1.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -28573,7 +28573,7 @@ jurer qu'on a renoncé une relation.
 Le fils et son père ont juré qu'ils ne veulent rien avoir l'un avec l'autre.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/seckosmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/seckosmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -29732,7 +29732,7 @@ lit en bois peu élevé et mobile avec l'intérieur en peau.
 Pour faire le lit en bois les gens cherchent des bois qui sont longs et droits.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/lionsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/lionsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -30065,7 +30065,7 @@ esp. de poisson [Heterotis niloticus].
 Le "ngoo" est un grand poisson avec beaucoup d'écailles et sa chaire est délicieuse.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/image072.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/image072.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -32263,7 +32263,7 @@ aiguille.
 L'aiguille est une chose pour coudre les habits.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/maraboutsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/maraboutsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -34011,7 +34011,7 @@ Français
 distribuer (les cartes de jeu).
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/pusmangsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/pusmangsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -35268,7 +35268,7 @@ Arabe
 grosse théière servant au musulman de se laver avant leurs prières.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/mboge1.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/mboge1.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -36226,7 +36226,7 @@ Le soleil se couche et il devient sombre.
 <span class="sara-bagirmi-lang"><a class="play-sound" onclick="playSound('Sound/Kab2164Exp01SS.mp3')"> Dèɓē kàré nòhò yɔ̄ táḿ nì bī kàm ní sìlī.</a></span>Un homme qui est malade, il est mécontent (son visage est sombre).
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/hearthsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/hearthsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -36484,7 +36484,7 @@ Quand un Koulfa parle il est difficile à comprendre.
 -la langue Koulfa
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/bucketsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/bucketsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -37647,7 +37647,7 @@ La genette est un animal dont sa peau les jeunes initiés attachent à leurs fes
 peau de genette utilisée par les nouveaux initiés.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/genetsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/genetsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -41838,7 +41838,7 @@ manger gloutonnement.
 La personne égarée est revenue (de son état d'être perdue) et il a mangé gloutonnement tout qu'on peut manger.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/haresmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/haresmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -41953,7 +41953,7 @@ coeur.
 <span class="sara-bagirmi-lang"><a class="play-sound" onclick="playSound('Sound/Kab147Exp02SSa.mp3')"> Mōnō má yɔ̄ númā kūmáy bī wù hólō nì.</a></span>Mon enfant a beaucoup de fièvre et aussi la nausée.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/ostrichsmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/ostrichsmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -42535,7 +42535,7 @@ Mon père est plus adroit que ses camarades (chasseurs aussi).
 esp. d'arbre à fruits jaunâtres.
 </div><div class="def">
 <div class="dict-img-right">
-<img class="dict-img" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/ratrayesmall.jpg">
+<img class="dict-img" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/ratrayesmall.jpg">
 </div>
 <span class="word">
 <span class="w sara-bagirmi-lang">
@@ -43598,7 +43598,7 @@ Quand quelqu'un travail avec la craie au tableau alors la craie s'use.
 </footer>
 <!-- javascript -->
 
-<script type="text/javascript" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/js/dictscript.js"></script>
+<script type="text/javascript" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/js/dictscript.js"></script>
 
 
 
