--- a/Gor/index.html
+++ b/Gor/index.html
@@ -18,19 +18,19 @@ body {
 
 <meta name="viewport" content="width=device-width">
 <title>Lexique Gor</title>
-<link rel="stylesheet" href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/css/dictstylesheet.css">
+<link rel="stylesheet" href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/css/dictstylesheet.css">
 
 </head>
 <body>
 <div id="noscript">
 JavaScript must be enabled to use the Gor language sound dictionary.
 If you do not have or wish to enable javascript,
-please view the <a href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/pdfs/Gor.pdf">Gor PDF dictionary</a>.
+please view the <a href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/pdfs/Gor.pdf">Gor PDF dictionary</a>.
 </div>
 <div id="loading">
 <h1>The Sound Dictionary is loading...</h1>
 <br>
-<img src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/Spinner.gif" alt="loading image">
+<img src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/Images/Spinner.gif" alt="loading image">
 </div>
 <nav>
 <div id="quiver" class="down">
@@ -45,7 +45,7 @@ please view the <a href="http://morkegbooks.com/Services/World/Languages/SaraBag
 <div class="collapsable-content">
 <a href="#intro" id="intro-link">Introduction</a>
 <a href="#abbr" id="abbr-link">Abbréviations</a>
-<a href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/">Home</a>
+<a href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/">Home</a>
 </div>
 </div>
 <div class="form-group">
@@ -79,7 +79,7 @@ Etienne Odjiadoum <br>
   le Projet des Langues Sara-Baguirmiènne
   <br>
   est disponible à</h3>
-  <a href="http://morkegbooks.com/Services/World/Languages/SaraBagirmi">http://morkegbooks.com/Services/World/Languages/SaraBagirmi</a>
+  <a href="https://morkegbooks.com/Services/World/Languages/SaraBagirmi">https://morkegbooks.com/Services/World/Languages/SaraBagirmi</a>
 
   <hr>
   </section>
@@ -15111,7 +15111,7 @@ La dent de mon petit fils est lâchée.
 </footer>
 <!-- javascript -->
 
-<script type="text/javascript" src="http://morkegbooks.com/Services/World/Languages/SaraBagirmi/js/dictscript.js"></script>
+<script type="text/javascript" src="https://morkegbooks.com/Services/World/Languages/SaraBagirmi/js/dictscript.js"></script>
 
 
 
