--- a/Mbay/indexDontUse.html
+++ b/Mbay/indexDontUse.html
@@ -18,8 +18,11 @@
 <span class="type">VAU  </span>
 will {future marker}.
 <span class="sara-bagirmi-lang">
-<a class="play-sound" onclick="playSound('Sound/Mba386SS01.mp3')"> à ɗèē lòo-tīi.</a>  </span>
-He will come tomorrow.
+<a class="play-sound" onclick="playSound('Sound/Mba386SS01.mp3')"> à ɗèē lòo-tīi.1</a>  </span>
+He will come tomorrow.1
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/Mba386SS01.mp3')"> à ɗèē lòo-tīi.2</a>  </span>
+He will come tomorrow.2
 <span class="type">VAU  </span>
 {habitual marker}.
 <span class="sara-bagirmi-lang">
