--- a/Mbay/indexDontUse.html
+++ b/Mbay/indexDontUse.html
@@ -9,6 +9,65 @@
 </head>
 <body>
 <div id="dict-content"><div class="page" id="page1"><span id="p1" class="anchor"></span><span class="page-number">1</span>
+    <div class="def">
+<span class="word">
+<span class="w sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/MBAY01A532.mp3')"> ámpɨ̀rmē</a>
+</span>
+[ámpɨ̀rmḛ́ḛ̀, ámpɨ̀rmḛ̄]
+French
+</span>
+<span class="type">NI  </span>
+nurse; hospital aide.
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/MBAY01A538.mp3')"> ámpɨ̀rmē ɔ̀sɨ̀-á kɨ̀ kḭ̄ḭ.</a>  </span>
+The nurse gave him a shot.
+</div>
+    <div class="def">
+<span class="word">
+<span class="w sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/RCN_141_20.mp3')"> yòo-ngōn-kāgɨ̄</a>
+</span>
+[yòoŋgō̰nkāgɨ̄]
+</span>
+<span class="type">NI  </span>
+game - team tries to get other team to laugh.
+</div>
+    <div class="def">
+<span class="word">
+<span class="w sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/WordsA_49.mp3')"> àkúu</a>
+</span>
+Sango
+(Syn: kókòwārī)
+</span>
+<span class="type">NI  </span>
+parrot.
+<span class="sara-bagirmi-lang">  </span>
+The parrot is a bird which imitates people's voices.
+</div>
+    <div class="def">
+<span class="word">
+<span class="w sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/NewExpSS2203.mp3')"> àbḭ̀yō̰o̰,àbḭ̀yó̰ò̰</a>
+</span>
+French
+</span>
+<span class="type">NI  </span>
+airplane.
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/MBAY01A137.mp3')"> àbḭ̀yō̰o̰ tɔ̀ӯ dò̰ó̰ kɨ̀-sḭ́ḭ làā.</a>  </span>
+An airplane flew overhead this morning.
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/Clem7_90_08.mp3')"> àbḭ̀yō̰o̰ ùdɨ̀ bèŕ/ɓày dò̰ó̰.</a>  </span>
+The airplane landed/took off.
+<span class="sara-bagirmi-lang">  </span>
+My son came by airplane and came and met me here at home.
+<span class="">Expr: </span>
+<span class="sara-bagirmi-lang">lòo-kùdɨ̀-àbḭ̀yō̰o̰</span>
+-airport
+<span class="sara-bagirmi-lang"><a class="play-sound" onclick="playSound('Sound/NewExpSS2207.mp3')"> Lòo-kùdɨ̀-àbḭ̀yō̰o̰ kɨ́ Njàménà tɨ́ àbḭ̀yō̰o̰-gɨ̄ bà̰y-n̄ tɨ́ ngá̰y.</a></span>At the airport in N'djamena there are a lot of airplanes.
+</div>
 <div class="def">
 <span class="word">
 <span class="w sara-bagirmi-lang">
