--- a/Mbay/indexDontUse.html
+++ b/Mbay/indexDontUse.html
@@ -71,6 +71,35 @@ My son came by airplane and came and met me here at home.
 <div class="def">
 <span class="word">
 <span class="w sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/WordsA_144.mp3')"> àӯ</a>
+</span>
+</span>
+<span class="type">VIA  </span>
+be dry.
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/MBAY01B236.mp3')"> Kūbɨ̄ lò-ḿ-gɨ̄ àӯ-n̄ àĺ tɔ̀ɔ̄. (=Kūbɨ̄-gɨ̄ lò-ḿ àӯ-n̄ àĺ tɔ̀ɔ̄.)</a>  </span>
+My clothes aren't dry yet.
+<span class="type">VI  </span>
+become dry.
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/CommonWordsW26.mp3')"> Ndīi èdɨ̀ nà̰ sḭ́ḭ bè ànḛ̄ dà-nàng àӯ.</a>  </span>
+The rain falls and then shortly after the ground dries.
+<span class="type">VI  </span>
+be/become clear.
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/CommonWordsV02.mp3')"> Dà-rā̰a̰ àӯ.</a>  </span>
+The sky is clear.
+<span class="">Expr: </span>
+<span class="sara-bagirmi-lang">kùm [dèē] àӯ</span>
+-be open, wise to the world, mature
+<span class="sara-bagirmi-lang"><a class="play-sound" onclick="playSound('Sound/NewExpSS2414.mp3')"> Nḛ̄ḛ́ ngōn kó̰o̰-ḿ dūú ngá̰y kàm-á àӯ àĺ tɔ̀ɔ̄.</a></span>My brother's wife is very young, she's not yet wise to the ways of the world.
+<span class="">Expr: </span>
+<span class="sara-bagirmi-lang">wúl̄ kɨ́ àӯ</span>
+-partially dried peanuts used in making <font face="SaraBagirmi">màndàwá</font>
+</div>
+<div class="def">
+<span class="word">
+<span class="w sara-bagirmi-lang">
 <a class="play-sound" onclick="playSound('Sound/Mba386W.mp3')"> à</a>
 </span>
 </span>
