--- a/Mbay/indexDontUse.html
+++ b/Mbay/indexDontUse.html
@@ -125,6 +125,10 @@ He will come tomorrow.2
 </span>
 <span class="type">INT  </span>
 particle marking an interrogative sentence (alternate to
+<span class="sara-bagirmi-lang">wà2</span> or
+<span class="sara-bagirmi-lang">wà3</span> or
+<span class="sara-bagirmi-lang">wà4</span> or
+<span class="sara-bagirmi-lang">wà5</span> or
 <span class="sara-bagirmi-lang">wà</span>).
 <span class="sara-bagirmi-lang">
 <a class="play-sound" onclick="playSound('Sound/MBAY01A26.mp3')"> Bà̰ý à?</a>  </span>
