--- a/Mbay/indexDontUse.html
+++ b/Mbay/indexDontUse.html
@@ -9,6 +9,25 @@
 </head>
 <body>
 <div id="dict-content"><div class="page" id="page1"><span id="p1" class="anchor"></span><span class="page-number">1</span>
+    
+    <!-- TODO: Deal with this edge case () after a opening ( -->
+    <div class="def">
+<span class="word">
+<span class="w sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/NgonKad6W.mp3')"> ngōn-kàdɨ̀</a>
+</span>
+[ŋgō̰nkàdɨ̀]
+</span>
+<span class="type">NI  </span>
+minute (lit: child of hour) (pl. is
+<span class="sara-bagirmi-lang">ngán-kàdɨ̀</span>; if hour (
+<span class="sara-bagirmi-lang">ngán-kàdɨ̀</span>) is already mentioned, becomes
+<span class="sara-bagirmi-lang">ngán-kàdɨ̀</span> 'its minutes').
+<span class="sara-bagirmi-lang">
+<a class="play-sound" onclick="playSound('Sound/MbayNG3_206.mp3')"> Kàdɨ̀ ì kɨ̀lá kɨ́ ngán-á-gɨ̄ dɔ̀-jōó-gìdɨ̀-kɨ́-mḭ́ḭ.</a>  </span>
+It's 10:25.  [lit: hour is ten with minutes-its twenty-five]
+</div>
+    
     <div class="def">
 <span class="word">
 <span class="w sara-bagirmi-lang">
